--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -254,15 +254,15 @@ footer {
 }
 
 .git-icon {
-  content: url("images/github-mark-white.svg");
+  content: url("/images/github-mark-white.svg");
 }
 
 .mail-icon {
-  content: url("images/mail-white.svg");
+  content: url("/images/mail-white.svg");
 }
 
 .linked-in {
-  content: url("images/li-in-white.png");
+  content: url("/images/li-in-white.png");
 }
 
 /* 404 */
@@ -327,15 +327,15 @@ html.light {
 }
 
 .light .git-icon {
-  content: url("images/github-mark.svg");
+  content: url("/images/github-mark.svg");
 }
 
 .light .mail-icon {
-  content: url("images/mail.svg");
+  content: url("/images/mail.svg");
 }
 
 .light .linked-in {
-  content: url("images/li-in.png");
+  content: url("/images/li-in.png");
 }
 
 .light .badge__link {
